<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Descubriendo La Alberca</string>
    <string name="tituloprincipal">¡Bienvenido a La Alberca!</string>
    <string name="textoprincipal">Al sur de la provincia de Salamanca, en el corazón de la
        Sierra de Francia, se encuentra La Alberca, rodeada de extensos bosques repletos de robles y castaños. Cada rincón
        de La Alberca tiene un encanto especial: sus calles empedradas, sus casas construídas de piedra y madera y los tejados
        que se van juntando en el aire forman un conjunto arquitectónico en el cual perderse y disfrutar. \n
    </string>
    <string name="textoprincipal2">La Alberca, escenario mágico, puede presumir de ser el primer pueblo en ser declarado
        Conjunto Histórico Artístico en España, concretamente en 1940. Sus fiestas, sus tradiciones, como la Moza de Ánimas o
        el Marrano de San Antón, su gastronomía… tantas y tantas razones que harán de su visita una experiencia inigualable.
        Como le gusta decir al poeta y catedrático albercano Don José María Requejo, La Alberca es…  \n</string>
    <string name="textoprincipal4">Un Pueblo Para Soñar \n</string>
    <string name="dialog_tour_titulo">¡Bienvenido a La Alberca!</string>
    <string name="dialog_tour"> ¿Eres nuevo? ¿Quieres hacer un tour por la aplicación?</string>
    <string name="button_tour">¡Si!</string>
    <string name="ajustes1"> ¿Cómo llegar?</string>
    <string name="ajustes2">Idioma de la aplicación</string>
    <string name="button_notour">No, gracias</string>
    <string name="siguiente">Siguiente</string>
    <string name="dialog_toursi_titulo">Pantalla de Inicio</string>
    <string name="dialog_tourSi">Esta es la pantalla de inicio de la aplicación. Desde ella podrás acceder a todo
        el resto de secciones de la aplicación.</string>
    <string name="seleccione_un_idioma">Seleccione un idioma:</string>
    <string name="tradicionesmayus">Tradiciones y Leyendas</string>
    <string name="gastronomiamayus">Gastronomía</string>
    <string name="rutasmayus">Rutas Senderistas</string>
    <string name="otrosmayus">Otros Lugares</string>
    <string name="inicio">Inicio</string>
    <string name="ajustes">Ajustes</string>
    <string name="mapa">Mapas</string>
    <string name="categorias">Categorías</string>
    <string name="fiestasmayus">Fiestas</string>
    <string name="castellano">Castellano</string>
    <string name="euskera">Euskera</string>
    <string name="ingles">Inglés</string>
    <string name="historiamayus">Historia</string>
    <string name="atras">Anterior</string>
    <string name="arquitecturamayus">Arquitectura</string>
    <string name="la_casa_albercana">La Casa Albercana</string>
    <string name="_2_aspecto_interior">Aspecto Interior</string>
    <string name="_1_aspecto_exterior">Aspecto Exterior</string>
    <string name="_3_inscripciones">Inscripciones</string>
    <string name="artesaniamayus">Artesanía</string>
    <string name="el_bordado_serrano">El Bordado Serrano</string>
    <string name="traje_serrano">El Traje Serrano</string>
    <string name="traje_mujer">Los trajes de mujer</string>
    <string name="traje_hombre">El traje de hombre</string>
    <string name="ajustes3">¿Dónde comer?</string>
    <string name="ajustes4">¿Dónde dormir?</string>
    <string name="zona_de_usuarios">Espacio del Viajero</string>
    <string name="masinfo">Más información</string>
    <string name="alhajas">Orfebrería</string>
    <string name="interior_inicio">La casa albercana tenía tres partes fundamentales: la cuadra,
        la vivienda y el lugar de almacenamiento. \n</string>
    <string name="rutas_inicio">Todo pueblo de cuento debe tener un entorno de ensueño, y La Alberca no iba a ser menos. Bosques de pinos, robledales y castaños dan vida a los alrededores de este pueblo, con rutas de todo tipo en los que poder disfrutar de la naturaleza, de la fauna y del aire puro que nos ofrecen. \n</string>
    <string name="alojamiento_inicio">Si deseas pasar más de un día en La Alberca para poder conocer todos sus secretos, existen muchas
        opciones de alojamiento: \n</string>
    <string name="apart">Apartamentos</string>
    <string name="hotel">Hoteles</string>
    <string name="casas">Casas Rurales</string>
    <string name="bares">Bares</string>
    <string name="rest">Restaurantes</string>
    <string name="contacto">Contacto</string>
    <string name="asunto_del_mensaje">Asunto del mensaje</string>
    <string name="mensajeet">¿Qué deseas comentarnos?</string>
    <string name="mensaje">Mensaje</string>
    <string name="asuntoet">¿Cuál es el motivo de tu mensaje?</string>
    <string name="asuntoVacio">El asunto del mensaje no puede estar vacío</string>
    <string name="formulario_de_contacto">Formulario de Contacto</string>
    <string name="enviar">Enviar</string>
    <string name="mensajeVacio">El mensaje no puede estar vacío</string>
    <string name="ajustes6">Comercio local</string>
    <string name="comoLlegar2">¿Cómo llegar hasta La Alberca?</string>
    <string name="comoLlegarCoche">La manera más fácil de llegar a La Alberca desde la capital de la provincia es mediante la carretera
        SA-215, hasta el pueblo de Tamames, donde tomaremos el desvío a la SA-201, que nos llevará hasta nuestro destino tras recorrer
        los 76 km que separan Salamanca de La Alberca. \n</string>
    <string name="en_coche">En Coche</string>
    <string name="introComoLlegar">La Alberca se encuentra al sur de la provincia de Salamanca, haciendo frontera con la provincia de
        Cáceres. Debido a su localización limítrofe, históricamente, se conocía a La Alberca como la puerta de Las Hurdes.\n </string>
    <string name="en_bus">En Autobús</string>
    <string name="comoLlegarBus">Si no dispone de vehículo propio para poder venir hasta La Alberca o simplemente desea venir en autobús,
        existen líneas de autobuses con diferentes horarios de ida y vuelta para poder visitar el pueblo: \n</string>
    <string name="otros_lugares">En los alrededores de La Alberca existen muchos otros preciosos pueblos y lugares que descubrir. Aquí van unos cuantos: \n</string>
    <string name="turroneras">Las Turroneras</string>
    <string name="alimentacion">Alimentación</string>
    <string name="idioma_validator">idioma</string>
    <string name="pueblos_de_la_sierra">Pueblos de la Sierra de Francia</string>
    <string name="km_desde_la_alberca">Km desde La Alberca:</string>
    <string name="fiesta_mayor">Fiesta Mayor:</string>
    <string name="recetas">Recetas típicas</string>
    <string name="quienes_somos">¿Quienes somos?</string>
    <string name="agradecimientos">Agradecimientos</string>
    <string name="cultura">Cultura</string>
    <string name="agradecimientotext" tools:ignore="Typos">Esta aplicación nace del amor a un pueblo, a su gente y a sus costumbres. He tenido la gran suerte de poder formar parte de ellas desde que nací, y aunque suene a tópico, no hay pueblo que mime más su historia y sus raíces que La Alberca. \n\nQuiero agradecer a todas las personas que, directa o indirectamente, se han involucrado en este loco proyecto. El tiempo que habeis dedicado en investigar sobre este maravilloso pueblo, las fotografías que habéis tomado en él y la dedicación para difundir al mundo el cariño que sentís por La Alberca han hecho que el resultado de esta aplicación sea mucho mejor de lo que podría haber imaginado. \nGracias, de corazón. \n\nGracias a mi familia y a mis amigos por el apoyo constante y por la ilusión al ver los avances de cada actualización de la aplicación y ver que de alguna manera, están representados en ella. \n\nFinalmente, gracias a mi madre y a mi tía Francis por estar dispuestas a colaborar en todo momento. Esta aplicación es tan mía como vuestra.\n\nGracias a ti, que estás detrás de la pantalla de tu dispositivo leyendo esto, tú eres el principal motivo de que esta aplicación exista. Ahora solo te queda una misión:\n\n </string>
    <string name="agradecimientostext2">Disfrutar de Descubriendo La Alberca\n</string>
    <string name="diccionario_albercano">Diccionario Albercano</string>
    <string name="ordenar_por">Ordenar por…</string>
    <string name="orden_alfabetico">Orden alfabético</string>
    <string name="orden_alfabetico_inverso">Orden alfabético inverso</string>
    <string name="popularidad_ascendente">Popularidad ascendente</string>
    <string name="popularidad_descendente">Popularidad descendente</string>
    <string name="whattodo">¿Qué deseas realizar?</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="anadir">Añadir</string>
    <string name="la_alberca_en_los_medios">La Alberca en los medios</string>
    <string name="la_alberca_y_el_deporte">La Alberca y el deporte</string>
    <string name="personajes_ilustres">Personajes ilustres</string>
    <string name="textpersonajesilustres1" > Muchos son los personajes ilustres y famosos que han visitado la Alberca, han hecho referencia a ella en sus escritos, han dejado retratada a sus gentes y paisajes o han utilizado su pueblo y alrededores para rodar sus películas o documentales. Ortega y Gasset, Miguel de Unamuno, Maurice Legendre, Luis Buñuel… todos nombres muy importantes que dejaron su huella en La Alberca. \n</string>
    <string name="textpersonajesilustres2" >El padre Don Luis de Hoyos (1894-1976) religioso dominico, escritor y editor es otra de las personas más reconocidas en La Alberca. Fueron varios los libros que escribió sobre la historia, fisonomía, vida y folklore de La Alberca, como La Alberca: Vida y Folklore, primer libro en pasar a la historia como el primero de la colección de libros culturales en formato digital del servicio de publicaciones de la Diputación de Salamanca, con un prólogo de José Luis Puerto, albercano de cuna. \n</string>
    <string name="textpersonajesilustres3" >Jose Luis Puerto nació en La Alberca en 1953. Poeta, etnógrafo, catedrático de lengua y literatura española, entre otras cosas, fue nombrado "Premio ciudad de Segovia de poesía", "Premio de poesía Jaime Gil de Bedmia" y "Premio Castilla y León de las letras" por el conjunto de sus obras, lleva a La Alberca por bandera en sus obras literarias. \n</string>
    <string name="textpersonajesilustres4" >También pintores como Sorolla, José Guerrero o Ismael Blat pasaron por La Alberca e hicieron de esta localidad la musa de sus obras. \n</string>
    <string name="textmedios1" >Que La Alberca sea un pueblo tan pintoresco ha propiciado que haya sido escenario de numerosas películas, series y programas de TV. Películas tan famosas como Tierra Sin Pan, rodada en 1932 por Luis Buñuel, Marcelino Pan y Vino, rodada en 1955, o La Marrana, interpretada por Alfredo Landa y Antonio Resines, han utilizado las calles y plazas de La Alberca como escenografía. \n</string>
    <string name="textmedios2" > Respecto a programas de televisión, Masterchef, Maestros de la Costura, España Directo o El Paisano son algunos de los muchos que han querido empaparse de las tradiciones, gastronomía y artesanía de La Alberca. Además, grandes productoras como Netflix han elegido este enclave tán especial como escenario para sus series, como la serie de Netflix “Érase Una Vez, Pero Ya No” en la que podemos ver varios lugares del pueblo.  \n</string>
    <string name="textmedios3"> También sus calles y alrededores han servido de inspiración a muchos escritores que han querido dejar reflejada en sus libros la historia y costumbres del lugar. En verso o en prosa, fieles a la historia y al día a día de sus habitantes, como La Madre de los Aires del escritor albercano José Luis Puerto, donde rememora su infancia campesina o La Alberca: Vida y costumbre, del Padre Hoyos, además de alguna que otra novela de misterio, como La Prisionera de la Cumbre Nevada, del escritor Christian Furquet. \n </string>
</resources>