<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1">
        <item
            android:id="@+id/menu_idioma"
            android:title="@string/ajustes2"/>
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/menu_contacto"
            android:title="@string/contacto" />
    </group>

    <group android:id="@+id/grp3">
        <item
            android:id="@+id/menu_acercade"
            android:title="@string/acerca_de">
            <menu>
                <item android:id="@+id/menu_agradecimientos"
                    android:title="@string/agradecimientos" />
                <item android:id="@+id/menu_quienessomos"
                    android:title="@string/quienes_somos" />
            </menu>
        </item>
    </group>
</menu>