<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/home_foreground"
        android:title="@string/inicio" />

    <item
        android:id="@+id/navigation_categoria"
        android:title="@string/categorias"
        android:icon="@drawable/list_foreground"/>

    <item
        android:id="@+id/navigation_mapa"
        android:title="@string/mapa"
        android:icon="@drawable/maps_foreground"/>

    <item
        android:id="@+id/navigation_viajero"
        android:title="Espacio del Viajero"
        android:icon="@drawable/person_foreground" />

    <item
        android:id="@+id/navigation_ajustes"
        android:title="@string/ajustes"
        android:icon="@drawable/settings" />

</menu>