<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".otherFiles.dialogFragments.ordenarFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        tools:ignore="UselessParent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="casual"
        android:hint="@string/ordenar_por"
        android:textAlignment="gravity"
        android:textColorHint="#000000"
        android:textStyle="bold"
        android:textSize="24sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textoajustes">

            <RadioButton
                android:id="@+id/radio_atoz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:checked="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:text="@string/orden_alfabetico" />

            <RadioButton
                android:id="@+id/radio_ztoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:checked="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:text="@string/orden_alfabetico_inverso" />

            <RadioButton
                android:id="@+id/radio_asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                android:textSize="18sp"
                android:checked="false"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:text="@string/popularidad_ascendente"/>

            <RadioButton
                android:id="@+id/radio_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:visibility="gone"
                android:checked="false"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:text="@string/popularidad_descendente" />

        </RadioGroup>

    </LinearLayout>

</FrameLayout>