<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".categorias.principal.culturaInicio">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/cultura"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/diccionario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:padding="15dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:background="@drawable/borde_redondeado"
                android:text="@string/diccionario_albercano" />

            <Button
                android:id="@+id/medios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:padding="15dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:background="@drawable/borde_redondeado"
                android:text="@string/la_alberca_en_los_medios" />

            <Button
                android:id="@+id/personajesilustres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:padding="15dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:background="@drawable/borde_redondeado"
                android:text="@string/personajes_ilustres" />

            <Button
                android:id="@+id/deporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:padding="15dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:background="@drawable/borde_redondeado"
                android:text="@string/la_alberca_y_el_deporte" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>