<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".categorias.secundarias.cultura.personajesilustres">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="8dp"
        android:scrollbars="vertical"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="15dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/gastrotext"
            android:layout_width="323dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="27sp"
            android:textColor="@color/black"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/personajes_ilustres"
            android:textAlignment="gravity"
            android:textStyle="bold"
            tools:targetApi="o"
            tools:ignore="HardcodedText" />

        <com.example.tfg.otherFiles.adapters.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:fontFamily="casual"
            android:text="@string/textpersonajesilustres1"
            android:textColor="@color/black"
            android:gravity='center_horizontal'
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/imgpersonajesilustres1"
            android:layout_width="300dp"
            android:layout_height="190dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/laalberca2"
            android:contentDescription="Foto receta"
            tools:ignore="HardcodedText">
        </ImageView>

        <com.example.tfg.otherFiles.adapters.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="10dp"
            android:fontFamily="casual"
            android:text="@string/textpersonajesilustres2"
            android:textColor="@color/black"
            android:gravity='center_horizontal'
            android:textSize="18sp"/>

        <com.example.tfg.otherFiles.adapters.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:fontFamily="casual"
            android:text="@string/textpersonajesilustres3"
            android:textColor="@color/black"
            android:gravity='center_horizontal'
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/imgpersonajesilustres2"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/laalberca2"
            android:contentDescription="Foto receta"
            tools:ignore="HardcodedText">
        </ImageView>

        <com.example.tfg.otherFiles.adapters.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:fontFamily="casual"
            android:text="@string/textpersonajesilustres4"
            android:textColor="@color/black"
            android:gravity='center_horizontal'
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/imgpersonajesilustres3"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/laalberca2"
            android:contentDescription="Foto receta"
            tools:ignore="HardcodedText">
        </ImageView>


    </LinearLayout>

</ScrollView>