<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ajustes.Agradecimientos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="8dp"
        android:background="@color/white"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:paddingBottom="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ajustestext"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/agradecimientos"
                android:textColor="@color/black"
                android:textAlignment="gravity"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.example.tfg.otherFiles.adapters.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:fontFamily="casual"
                android:text="@string/agradecimientotext"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:text="@string/agradecimientostext2"
                android:textSize="19sp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>